--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Boutique de Chaussures</title>
+<title>Boutique de Chaussures Pas Chère</title>
 <style>
        body {
            font-family: Arial, sans-serif;
