--- a/index.html
+++ b/index.html
@@ -72,28 +72,28 @@
 </head>
 <body>
 <header>
-<h1>Boutique de Chaussures</h1>
+<h1>Boutique de Chaussures Pas Chère</h1>
 </header>
 <div class="container">
 <div class="product">
-<img src="chaussure1.jpg" alt="Chaussure 1">
-<h3>Chaussures de sport</h3>
-<p>Chaussures confortables pour la course à pied.</p>
-<div class="price">69,99 €</div>
+<img src="Travis.jpg" alt="Chaussure 1">
+<h3>Chaussures qui court vite</h3>
+<p>Chaussures de bandeur de Hlel.</p>
+<div class="price">25,99 €</div>
 <button>Acheter</button>
 </div>
 <div class="product">
-<img src="chaussure2.jpg" alt="Chaussure 2">
-<h3>Chaussures élégantes</h3>
-<p>Chaussures de ville pour hommes.</p>
-<div class="price">89,99 €</div>
+<img src="J4Thunder.jpg" alt="Chaussure 2">
+<h3>Chaussures pour démarrer des mère</h3>
+<p>Chaussures de videur de boite de nuit.</p>
+<div class="price">29,99 €</div>
 <button>Acheter</button>
 </div>
 <div class="product">
-<img src="chaussure3.jpg" alt="Chaussure 3">
-<h3>Baskets en toile</h3>
-<p>Chaussures légères pour tous les jours.</p>
-<div class="price">49,99 €</div>
+<img src="Patta.jpg" alt="Chaussure 3">
+<h3>Baskets de guetteur</h3>
+<p>Chaussures parfaite pour semer les keufs.</p>
+<div class="price">34,99 €</div>
 <button>Acheter</button>
 </div>
 </div>
