--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Boutique de Chaussures</title>
+<title>EcoSphere</title>
 <style>
        body {
            font-family: Arial, sans-serif;
@@ -12,7 +12,7 @@
            background-color: #f5f5f5;
        }
        header {
-           background-color: #333;
+           background-color: #008800;
            color: white;
            text-align: center;
            padding: 20px;
@@ -72,7 +72,7 @@
 </head>
 <body>
 <header>
-<h1>Boutique de Chaussures</h1>
+<h1>EcoSphere</h1>
 </header>
 <div class="container">
 <div class="product">
