--- a/index.html
+++ b/index.html
@@ -1,104 +1,74 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>EcoSphere</title>
-<style>
-       body {
-           font-family: Arial, sans-serif;
-           margin: 0;
-           padding: 0;
-           background-color: #f5f5f5;
-       }
-       header {
-           background-color: #008800;
-           color: white;
-           text-align: center;
-           padding: 20px;
-       }
-       .container {
-           display: grid;
-           grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
-           gap: 20px;
-           padding: 20px;
-       }
-       .product {
-           background-color: white;
-           border: 1px solid #ddd;
-           border-radius: 8px;
-           padding: 20px;
-           text-align: center;
-       }
-       .product img {
-           max-width: 100%;
-           height: auto;
-           border-bottom: 1px solid #ddd;
-           margin-bottom: 15px;
-       }
-       .product h3 {
-           font-size: 1.5em;
-           margin: 10px 0;
-       }
-       .product p {
-           color: #888;
-       }
-       .product .price {
-           font-size: 1.2em;
-           color: #333;
-           margin: 10px 0;
-       }
-       .product button {
-           padding: 10px 15px;
-           background-color: #28a745;
-           color: white;
-           border: none;
-           border-radius: 5px;
-           cursor: pointer;
-       }
-       .product button:hover {
-           background-color: #218838;
-       }
-       footer {
-           background-color: #333;
-           color: white;
-           text-align: center;
-           padding: 10px;
-           position: fixed;
-           width: 100%;
-           bottom: 0;
-       }
-</style>
+    <meta charset="UTF-8">
+    <meta name="EcoSphere" content="width=device-width, initial-scale=1.0">
+    <title>Mon Site Web</EcoSphere>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            line-height: 1.6;
+            background-color: #f4f4f4;
+            margin: 0;
+            padding: 0;
+        }
+        header {
+            background: #35424a;
+            color: #ffffff;
+            padding: 20px 0;
+            text-align: center;
+        }
+        nav {
+            margin: 20px 0;
+        }
+        nav a {
+            margin: 0 15px;
+            color: #ffffff;
+            text-decoration: none;
+        }
+        article {
+            margin: 20px;
+            padding: 20px;
+            background: #ffffff;
+            border-radius: 5px;
+            box-shadow: 0 2px 5px rgba(0,0,0,0.2);
+        }
+        footer {
+            text-align: center;
+            padding: 10px;
+            background: #35424a;
+            color: #ffffff;
+            position: relative;
+            bottom: 0;
+            width: 100%;
+        }
+    </style>
 </head>
 <body>
-<header>
-<h1>EcoSphere</h1>
-</header>
-<div class="container">
-<div class="product">
-<img src="chaussure1.jpg" alt="Chaussure 1">
-<h3>Chaussures de sport</h3>
-<p>Chaussures confortables pour la course à pied.</p>
-<div class="price">69,99 €</div>
-<button>Acheter</button>
-</div>
-<div class="product">
-<img src="chaussure2.jpg" alt="Chaussure 2">
-<h3>Chaussures élégantes</h3>
-<p>Chaussures de ville pour hommes.</p>
-<div class="price">89,99 €</div>
-<button>Acheter</button>
-</div>
-<div class="product">
-<img src="chaussure3.jpg" alt="Chaussure 3">
-<h3>Baskets en toile</h3>
-<p>Chaussures légères pour tous les jours.</p>
-<div class="price">49,99 €</div>
-<button>Acheter</button>
-</div>
-</div>
-<footer>
-<p>&copy; 2024 Boutique de Chaussures - Tous droits réservés</p>
-</footer>
+
+    <header>
+        <h1>Bienvenue sur mon site Web</h1>
+        <nav>
+            <a href="#about">À Propos</a>
+            <a href="#services">Services</a>
+            <a href="#contact">Contact</a>
+        </nav>
+    </header>
+
+    <article>
+        <h2 id="about">À Propos</h2>
+        <p>Ce site est un exemple de design web qui respecte différents principes de conception.</p>
+        
+        <h2 id="services">Services</h2>
+        <p>Nous offrons une gamme de services tels que la création de sites web, le design graphique, etc.</p>
+        
+        <h2 id="contact">Contact</h2>
+        <p>Vous pouvez nous contacter à travers notre adresse e-mail: exemple@site.com</p>
+    </article>
+
+    <footer>
+        <p>&copy; 2023 Mon Site Web. Tous droits réservés.</p>
+    </footer>
+
 </body>
 </html>
