--- a/index.html
+++ b/index.html
@@ -74,11 +74,23 @@
 
     <section id="contact">
         <h2>Contact</h2>
-        <p>Pour plus d'informations, vous pouvez nous contacter à l'adresse suivante : <a href="mailto:info@ecosite.com">info@ecosite.com</a></p>
+        <p>Pour plus d'informations, vous pouvez nous contacter à l'adresse suivante : <a href="mailto:AracheurDeMigrants@gmail.com">AracheurDeMigrants@gmail.com</a></p>
     </section>
 
     <footer>
-        <p>&copy; 2023 Site Écolo. Tous droits réservés.</p>
+        <p>&copy; 2023 Site Écolo. Tous droits réservés ,
+            Nique les salopes
+            qui parlent en scred
+            Si le savoir est une arme
+            et bah nique ta MERE
+            La rue cest dangereux poto
+            Le monde appartient a ceux
+            qui levent le YAMAHA 4 temps
+            Nique la canine et les Stups
+            QUI sy frotte Effrite
+            Plan WEED bien SERVI
+            8€ LE GRAMME
+            0683647893.</p>
     </footer>
 </body>
 </html>
