--- a/index.html
+++ b/index.html
@@ -79,17 +79,17 @@
 
     <footer>
         <p>&copy; 2023 Site Écolo. Tous droits réservés ,
-            Nique les salopes
-            qui parlent en scred
-            Si le savoir est une arme
-            et bah nique ta MERE
-            La rue cest dangereux poto
-            Le monde appartient a ceux
-            qui levent le YAMAHA 4 temps
-            Nique la canine et les Stups
-            QUI sy frotte Effrite
-            Plan WEED bien SERVI
-            8€ LE GRAMME
+            Nique les salopes<br>
+            qui parlent en scred<br>
+            Si le savoir est une arme<br>
+            et bah nique ta MERE<br>
+            La rue cest dangereux poto<br>
+            Le monde appartient a ceux<br>
+            qui levent le YAMAHA 4 temps<br>
+            Nique la canine et les Stups<br>
+            QUI sy frotte Effrite<br>
+            Plan WEED bien SERVI<br>
+            8€ LE GRAMME<br>
             0683647893.</p>
     </footer>
 </body>
