--- a/index.html
+++ b/index.html
@@ -1,62 +1,57 @@
+ 
+Copier
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Ma Plateforme de Contenu</title>
+    <title>Site de profil genre OnlyFans</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Bienvenue sur Ma Plateforme</h1>
+        <h1>Bienvenue sur le site de profils</h1>
         <nav>
             <ul>
-                <li><a href="#accueil">Accueil</a></li>
-                <li><a href="#abonnements">Abonnements</a></li>
-                <li><a href="#contact">Contact</a></li>
+                <li><a href="#">Accueil</a></li>
+                <li><a href="#">Profils</a></li>
+                <li><a href="#">S'abonner</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
     </header>
-    
+
     <main>
-        <section id="accueil">
-            <h2>Découvrez du contenu exclusif</h2>
-            <p>Rejoignez notre communauté pour accéder à du contenu unique créé par des créateurs passionnés.</p>
-        </section>
-
-        <section id="abonnements">
-            <h2>Choisissez votre abonnement</h2>
-            <div class="abonnement">
-                <h3>Abonnement Mensuel</h3>
-                <p>Pour 9,99 €/mois</p>
-                <button>S'inscrire maintenant</button>
+        <section class="profiles">
+            <div class="profile-card">
+                <img src="https://via.placeholder.com/150" alt="Profil 1">
+                <h2>Profil 1</h2>
+                <p>Description du profil 1.</p>
+                <button>S'abonner</button>
             </div>
-            <div class="abonnement">
-                <h3>Abonnement Annuel</h3>
-                <p>Pour 99,99 €/an</p>
-                <button>S'inscrire maintenant</button>
+            <div class="profile-card">
+                <img src="https://via.placeholder.com/150" alt="Profil 2">
+                <h2>Profil 2</h2>
+                <p>Description du profil 2.</p>
+                <button>S'abonner</button>
             </div>
-        </section>
-
-        <section id="contact">
-            <h2>Contactez-nous</h2>
-            <form>
-                <label for="nom">Nom :</label>
-                <input type="text" id="nom" name="nom" required>
-
-                <label for="email">Email :</label>
-                <input type="email" id="email" name="email" required>
-
-                <label for="message">Message :</label>
-                <textarea id="message" name="message" required></textarea>
-
-                <button type="submit">Envoyer</button>
-            </form>
+            <div class="profile-card">
+                <img src="https://via.placeholder.com/150" alt="Profil 3">
+                <h2>Profil 3</h2>
+                <p>Description du profil 3.</p>
+                <button>S'abonner</button>
+            </div>
+            <div class="profile-card">
+                <img src="https://via.placeholder.com/150" alt="Profil 4">
+                <h2>Profil 4</h2>
+                <p>Description du profil 4.</p>
+                <button>S'abonner</button>
+            </div>
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 Ma Plateforme de Contenu</p>
+        <p>&copy; 2023 MonSiteDeProfils. Tous droits réservés.</p>
     </footer>
 </body>
 </html>
@@ -64,17 +59,18 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
+    background-color: #f4f4f4;
 }
 
 header {
-    background-color: #333;
-    color: #fff;
-    padding: 20px;
+    background: #ff5e5e;
+    color: white;
+    padding: 1rem 0;
     text-align: center;
 }
 
 nav ul {
-    list-style-type: none;
+    list-style: none;
     padding: 0;
 }
 
@@ -83,8 +79,8 @@ nav ul li {
     margin: 0 15px;
 }
 
-nav ul li a {
-    color: #fff;
+nav a {
+    color: white;
     text-decoration: none;
 }
 
@@ -92,18 +88,42 @@ main {
     padding: 20px;
 }
 
-.abonnement {
-    border: 1px solid #ccc;
-    margin: 10px 0;
-    padding: 10px;
+.profiles {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.profile-card {
+    background: white;
+    border-radius: 8px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    margin: 15px;
+    padding: 15px;
+    text-align: center;
+    width: 200px;
+}
+
+.profile-card img {
+    border-radius: 50%;
+}
+
+button {
+    background: #ff5e5e;
+    border: none;
+    border-radius: 5px;
+    color: white;
+    cursor: pointer;
+    padding: 10px 20px;
+}
+
+button:hover {
+    background: #ff3e3e;
 }
 
 footer {
+    background: #333;
+    color: white;
     text-align: center;
-    padding: 10px;
-    background-color: #333;
-    color: #fff;
-    position: fixed;
-    width: 100%;
-    bottom: 0;
+    padding: 10px 0;
 }
