--- a/index.html
+++ b/index.html
@@ -1,21 +1,19 @@
- 
-Copier
 <!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site de profil genre OnlyFans</title>
+    <title>Site Futuriste</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Bienvenue sur le site de profils</h1>
+        <h1>Mon Site Futuriste</h1>
         <nav>
             <ul>
                 <li><a href="#">Accueil</a></li>
-                <li><a href="#">Profils</a></li>
-                <li><a href="#">S'abonner</a></li>
+                <li><a href="#">À propos</a></li>
+                <li><a href="#">Profil</a></li>
                 <li><a href="#">Contact</a></li>
             </ul>
         </nav>
@@ -24,54 +22,52 @@ Copier
     <main>
         <section class="profiles">
             <div class="profile-card">
-                <img src="https://via.placeholder.com/150" alt="Profil 1">
-                <h2>Profil 1</h2>
-                <p>Description du profil 1.</p>
+                <img src="profile1.jpg" alt="Profil 1">
+                <h2>Nom de l'utilisateur 1</h2>
+                <p>Description de l'utilisateur 1...</p>
                 <button>S'abonner</button>
             </div>
             <div class="profile-card">
-                <img src="https://via.placeholder.com/150" alt="Profil 2">
-                <h2>Profil 2</h2>
-                <p>Description du profil 2.</p>
+                <img src="profile2.jpg" alt="Profil 2">
+                <h2>Nom de l'utilisateur 2</h2>
+                <p>Description de l'utilisateur 2...</p>
                 <button>S'abonner</button>
             </div>
             <div class="profile-card">
-                <img src="https://via.placeholder.com/150" alt="Profil 3">
-                <h2>Profil 3</h2>
-                <p>Description du profil 3.</p>
+                <img src="profile3.jpg" alt="Profil 3">
+                <h2>Nom de l'utilisateur 3</h2>
+                <p>Description de l'utilisateur 3...</p>
                 <button>S'abonner</button>
             </div>
-            <div class="profile-card">
-                <img src="https://via.placeholder.com/150" alt="Profil 4">
-                <h2>Profil 4</h2>
-                <p>Description du profil 4.</p>
-                <button>S'abonner</button>
-            </div>
+            <!-- Ajoutez d'autres profils ici -->
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 MonSiteDeProfils. Tous droits réservés.</p>
+        <p>&copy; 2023 Mon Site Futuriste. Tous droits réservés.</p>
     </footer>
 </body>
 </html>
-body {
-    font-family: Arial, sans-serif;
+* {
     margin: 0;
     padding: 0;
-    background-color: #f4f4f4;
+    box-sizing: border-box;
+}
+
+body {
+    font-family: Arial, sans-serif;
+    background-color: #1E1E1E;
+    color: #FFFFFF;
 }
 
 header {
-    background: #ff5e5e;
-    color: white;
-    padding: 1rem 0;
+    background-color: #2C2C2C;
+    padding: 20px;
     text-align: center;
 }
 
 nav ul {
-    list-style: none;
-    padding: 0;
+    list-style-type: none;
 }
 
 nav ul li {
@@ -79,51 +75,52 @@ nav ul li {
     margin: 0 15px;
 }
 
-nav a {
-    color: white;
+nav ul li a {
+    color: #FFFFFF;
     text-decoration: none;
-}
-
-main {
-    padding: 20px;
 }
 
 .profiles {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: center;
+    margin: 20px;
 }
 
 .profile-card {
-    background: white;
-    border-radius: 8px;
-    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
-    margin: 15px;
-    padding: 15px;
+    background-color: #3C3C3C;
+    border-radius: 10px;
+    padding: 20px;
+    margin: 10px;
     text-align: center;
     width: 200px;
+    transition: transform 0.3s;
 }
 
 .profile-card img {
-    border-radius: 50%;
+    border-radius: 10px;
+    width: 100%;
 }
 
-button {
-    background: #ff5e5e;
+.profile-card h2 {
+    margin: 10px 0;
+}
+
+.profile-card button {
+    background-color: #FF4C4C;
     border: none;
     border-radius: 5px;
-    color: white;
+    color: #FFFFFF;
+    padding: 10px 15px;
     cursor: pointer;
-    padding: 10px 20px;
 }
 
-button:hover {
-    background: #ff3e3e;
+.profile-card:hover {
+    transform: scale(1.05);
 }
 
 footer {
-    background: #333;
-    color: white;
     text-align: center;
-    padding: 10px 0;
+    padding: 20px;
+    background-color: #2C2C2C;
 }
