--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Site Futuriste</title>
+    <title>OnlyPlants</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
-        <h1>Mon Site Futuriste</h1>
+        <h1>OnlyPlants</h1>
         <nav>
             <ul>
                 <li><a href="#">Accueil</a></li>
@@ -23,28 +23,28 @@
         <section class="profiles">
             <div class="profile-card">
                 <img src="profile1.jpg" alt="Profil 1">
-                <h2>Nom de l'utilisateur 1</h2>
-                <p>Description de l'utilisateur 1...</p>
-                <button>S'abonner</button>
+                <h2>Marie-jeanne</h2>
+                <p>Pour planer entre les seins de Marie et Jeanne </p>
+                <button>Commander</button>
             </div>
             <div class="profile-card">
                 <img src="profile2.jpg" alt="Profil 2">
-                <h2>Nom de l'utilisateur 2</h2>
-                <p>Description de l'utilisateur 2...</p>
-                <button>S'abonner</button>
+                <h2>Ayahuasca</h2>
+                <p>Une préparation traditionnelle d'Amazonie qui combine plusieurs plantes contenant des substances psychoactives. Son nom est dérivé de la langue quechua et évoque des traditions culturelles spécifiques.</p>
+                <button>Commander</button>
             </div>
             <div class="profile-card">
                 <img src="profile3.jpg" alt="Profil 3">
-                <h2>Nom de l'utilisateur 3</h2>
-                <p>Description de l'utilisateur 3...</p>
-                <button>S'abonner</button>
+                <h2>Salvia Divinorum</h2>
+                <p>Une plante psychoactive qui peut provoquer des hallucinations intenses. Elle est souvent utilisée dans des rituels chamaniques, ce qui lui confère une connotation mystique.</p>
+                <button>Commander</button>
             </div>
             <!-- Ajoutez d'autres profils ici -->
         </section>
     </main>
 
     <footer>
-        <p>&copy; 2023 Mon Site Futuriste. Tous droits réservés.</p>
+        <p>&copy; 2023 Tous droits réservés l'entreprise n'endosse pas les consequence de l'utilisation.</p>
     </footer>
 </body>
 </html>
