--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <button>Commander</button>
             </div>
             <div class="profile-card">
-                <img src="profile3.jpg" alt="Profil 3">
+                <img src="OIP.jpg" alt="Salvia Divinorum">
                 <h2>Salvia Divinorum</h2>
                 <p>Une plante psychoactive qui peut provoquer des hallucinations intenses. Elle est souvent utilisée dans des rituels chamaniques, ce qui lui confère une connotation mystique.</p>
                 <button>Commander</button>
