--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     <main>
         <section class="profiles">
             <div class="profile-card">
-                <img src="profile1.jpg" alt="Profil 1">
+                <img src="OIP (1).jpg" alt="Profil 1">
                 <h2>Marie-jeanne</h2>
                 <p>Pour planer entre les seins de Marie et Jeanne </p>
                 <button>Commander</button>
