--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
         <section id="produits" class="produits">
             <h2>Nos Produits</h2>
             <div class="produit">
-                <img src="fleur1.jpg" alt="Fleur 1">
+                <img src="OIP.jpg" alt="Fleur 1">
                 <h3> bouquet de roses</h3>
                 <p>A partir de 29€</p>
                 <button class="btn">Ajouter au panier</button>
             </div>
             <div class="produit">
-                <img src="fleur2.jpg" alt="Fleur 2">
+                <img src="OIP (1).jpg" alt="Fleur 2">
                 <h3> bouquet de tulipes</h3>
                 <p>A partir de 25€</p>
                 <button class="btn">Ajouter au panier</button>
