--- a/index.html
+++ b/index.html
@@ -32,13 +32,13 @@
             <div class="produit">
                 <img src="OIP.jpg" alt="Fleur 1">
                 <h3> bouquet de roses</h3>
-                <p>A partir de 29€</p>
+                <p>A partir de 29€/G</p>
                 <button class="btn">Ajouter au panier</button>
             </div>
             <div class="produit">
                 <img src="OIP (1).jpg" alt="Fleur 2">
                 <h3> bouquet de tulipes</h3>
-                <p>A partir de 25€</p>
+                <p>A partir de 25€/Kg</p>
                 <button class="btn">Ajouter au panier</button>
             </div>
             <div class="produit">
@@ -51,7 +51,8 @@
         
         <section id="livraison" class="livraison">
             <h2>Livraison</h2>
-            <p>Nous livrons dans toute la ville en 24 heures.</p>
+            <p>Nous livrons dans toute la ville en 24 heures.
+            Et meme la région wahalla certifié Doc D et Ilias Livraison</p>
         </section>
         
         <section id="contact" class="contact">
