--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <header>
 <div class="logo">
-<img src="logo.png" alt="The Happy Environment Logo">
+<img src="LOGO.png" alt="The Happy Environment Logo">
 </div>
 <nav>
 <ul>
