--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 <a href="#" class="cta-button">Shop Outdoor Plants</a>
 </div>
 <div class="feature">
-<img src="accessories.jpg" alt="Plant Accessories">
+<img src="IM.jpg" alt="Plant Accessories">
 <h2>Plant Accessories</h2>
 <p>Find the perfect accessories to care for your plants.</p>
 <a href="#" class="cta-button">Shop Accessories</a>
