--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
 </section>
 <section class="features">
 <div class="feature">
-<img src="indoor-plants.jpg" alt="Indoor Plants">
+<img src="IM2.webp" alt="Indoor Plants">
 <h2>Indoor Plants</h2>
 <p>Bring nature into your home with our collection of indoor plants.</p>
 <a href="#" class="cta-button">Shop Indoor Plants</a>
 </div>
 <div class="feature">
-<img src="outdoor-plants.jpg" alt="Outdoor Plants">
+<img src="IM3.webp" alt="Outdoor Plants">
 <h2>Outdoor Plants</h2>
 <p>Transform your garden with our selection of outdoor plants.</p>
 <a href="#" class="cta-button">Shop Outdoor Plants</a>
 </div>
 <div class="feature">
-<img src="IM.jpg" alt="Plant Accessories">
+<img src="IM.webp" alt="Plant Accessories">
 <h2>Plant Accessories</h2>
 <p>Find the perfect accessories to care for your plants.</p>
 <a href="#" class="cta-button">Shop Accessories</a>
