--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 </section>
 <section class="features">
 <div class="feature">
-<img src="IM2.webp" alt="Indoor Plants">
+<img src="IM.webp" alt="Indoor Plants">
 <h2>Indoor Plants</h2>
 <p>Bring nature into your home with our collection of indoor plants.</p>
 <a href="#" class="cta-button">Shop Indoor Plants</a>
