--- a/index.html
+++ b/index.html
@@ -1,53 +1,57 @@
-<!DOCTYPE html>
-<html lang="en">
+<html lang="fr">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>The Happy Environment</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>BUCHEREAUTEK</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-<header>
-<div class="logo">
-<img src="LOGO.png" alt="NGO in Ghana">
-</div>
-<nav>
-<ul>
-<li><a href="#">Home</a></li>
-<li><a href="#">Indoor Plants</a></li>
-<li><a href="#">Outdoor Plants</a></li>
-<li><a href="#">Accessories</a></li>
-<li><a href="#">Contact Us</a></li>
-</ul>
-</nav>
-</header>
-<section class="hero">
-<h1>Welcome to The Happy Environment</h1>
-<p>Your one-stop shop for beautiful, healthy plants.</p>
-<a href="#" class="cta-button">Browse Our Plants</a>
-</section>
-<section class="features">
-<div class="feature">
-<img src="IM.webp" alt="Indoor Plants">
-<h2>Indoor Plants</h2>
-<p>Bring nature into your home with our collection of indoor plants.</p>
-<a href="#" class="cta-button">Shop Indoor Plants</a>
-</div>
-<div class="feature">
-<img src="IM3.webp" alt="Outdoor Plants">
-<h2>Outdoor Plants</h2>
-<p>Transform your garden with our selection of outdoor plants.</p>
-<a href="#" class="cta-button">Shop Outdoor Plants</a>
-</div>
-<div class="feature">
-<img src="IM.webp" alt="Plant Accessories">
-<h2>Plant Accessories</h2>
-<p>Find the perfect accessories to care for your plants.</p>
-<a href="#" class="cta-button">Shop Accessories</a>
-</div>
-</section>
-<footer>
-<p>&copy; 2024 The Happy Environment. All Rights Reserved.</p>
-</footer>
+    <header>
+        <h1>BUCHEREAUTEK</h1>
+        <nav>
+            <ul>
+              <button class="btn-hautdepage">Notres-Histoite</button/a>
+                <button class="btn-hautdepage">GTEM</button/a>
+                  <button class="btn-hautdepage">Shopping</button/a>
+                  <button class="btn-hautdepage">Contact</button/a>
+            </nav>
+        </ul>
+    </header>
+    <main>
+        <section id="Sweat">
+            <h2><img src="flr.png"></h2>
+            <div class="article">
+                <img src="IMG_s.jpeg" alt="Article 1">
+                <h3>Sweat a Capuche BUCHEREAUTEK</h3>
+                <p>Confort & Style Réunis</p>
+                    <button class="btn-acheter">Acheter</button>
+                </div>
+            <body>
+            </html>
+        <section id="T-shirt">
+            <div class="article">
+                <img src="IMG_t.jpeg" alt="Article 2">
+                <h3>Tshirt BUCHEREAUTEK</h3>
+                <p>Élégant & Décontractée</p>
+                    <button class="btn-acheter">Acheter</button>
+                </div>
+            <body>
+            </div>
+         <section id="Sweat">
+            <div class="article">
+                <img src="IMG_z.jpeg" alt="Article 3">
+                <h3>Sweat Zippé BUCHEREAUTEK</h3>
+                <p>Élégance Sportive & Polyvalent </p>
+                     <button class="btn-acheter">Acheter</button>
+                </div>
+            <body>
+            </div>
+        </section>
+    </main>
+
+    <footer>
+        <p>&copy; 2023 BUCHEREAUTEK - 
+            Vous presente sa boutique en ligne. Decouvrez nos dérnier produits sur notre boutiquenew_in .</p>
+    </footer>
 </body>
 </html>
