--- a/index.html
+++ b/index.html
@@ -1,57 +1,28 @@
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>BUCHEREAUTEK</title>
+    <title>Fleures and plants</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <h1>BUCHEREAUTEK</h1>
-        <nav>
-            <ul>
-              <button class="btn-hautdepage">Notres-Histoite</button/a>
-                <button class="btn-hautdepage">GTEM</button/a>
-                  <button class="btn-hautdepage">Shopping</button/a>
-                  <button class="btn-hautdepage">Contact</button/a>
-            </nav>
-        </ul>
-    </header>
-    <main>
-        <section id="Sweat">
-            <h2><img src="flr.png"></h2>
-            <div class="article">
-                <img src="IMG_s.jpeg" alt="Article 1">
-                <h3>Sweat a Capuche BUCHEREAUTEK</h3>
-                <p>Confort & Style Réunis</p>
-                    <button class="btn-acheter">Acheter</button>
-                </div>
-            <body>
-            </html>
-        <section id="T-shirt">
-            <div class="article">
-                <img src="IMG_t.jpeg" alt="Article 2">
-                <h3>Tshirt BUCHEREAUTEK</h3>
-                <p>Élégant & Décontractée</p>
-                    <button class="btn-acheter">Acheter</button>
-                </div>
-            <body>
-            </div>
-         <section id="Sweat">
-            <div class="article">
-                <img src="IMG_z.jpeg" alt="Article 3">
-                <h3>Sweat Zippé BUCHEREAUTEK</h3>
-                <p>Élégance Sportive & Polyvalent </p>
-                     <button class="btn-acheter">Acheter</button>
-                </div>
-            <body>
-            </div>
-        </section>
-    </main>
-
-    <footer>
-        <p>&copy; 2023 BUCHEREAUTEK - 
-            Vous presente sa boutique en ligne. Decouvrez nos dérnier produits sur notre boutiquenew_in .</p>
-    </footer>
-</body>
+  <header>
+    <div id="banier">
+      <img src="images/banier.png" class="banier_img" />
+      </div>
+     <div id="zone_rch">
+       ZONE DE RECHERCHE
+       </div>
+  </header>
+  <div id="cont">
+   <div id="resultat">
+     RESULTAT
+      </div>
+    </div>
+  
+  <footer>
+    PIED-DE-PAGE
+  </footer>
+  
+  
+  </body>
 </html>
