--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html lang="fr">
 <head>
     <meta charset="UTF-8">
@@ -18,11 +19,8 @@
      RESULTAT
       </div>
     </div>
-  
   <footer>
     PIED-DE-PAGE
   </footer>
-  
-  
   </body>
 </html>
