--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
   <header>
     <div id="banier">
-      <img src="images/banier.png" class="banier_img" />
+      <img src="banier.png" class="banier_img" />
       </div>
      <div id="zone_rch">
        ZONE DE RECHERCHE
