--- a/index.html
+++ b/index.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="fr">
-<head>
+  <head>
     <meta charset="UTF-8">
-    <title>Fleures and plants</title>
-    <link rel="stylesheet" href="style.css">
-</head>
-<body>
-  <header>
-    <div id="banier">
-      <img src="banier.png" class="banier_img" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Portfolio - Bryan Lane</title> 
+    <link rel="stylesheet" href="style.css"> 
+  </head> 
+  <body>
+    <header>
+      <div class="logo"><img src="3DDD.png"></div> 
+      <nav> 
+        <a href="#">Works</a>
+        <a href="#">Concepts</a>
+        <a href="#">Archive</a> 
+        <a href="#">Personal</a>
+      </nav> <div class="social">
+      <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
+      <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
       </div>
-     <div id="zone_rch">
-       ZONE DE RECHERCHE
-       </div>
-  </header>
-  <div id="cont">
-   <div id="resultat">
-     RESULTAT
-      </div>
+        </header>
+    <main>
+      <div class="quote">
+    <p>"Transform your space into green oasis"</p>
+        <span class="author">Edith Södergran</span>
     </div>
-  <footer>
-    PIED-DE-PAGE
-  </footer>
+    <div class="title"> 
+      <h1>The Happy Environement</h1> 
+      <h1 class="lane">Esteban Thomas</h1>
+    </div> 
+    <div class="image"img src="IMG_t.jpeg">
+      <img src="abstract-shape.png" alt="Abstract 3D Shape">
+    </div> 
+   </main>
   </body>
 </html>
