--- a/index.html
+++ b/index.html
@@ -1,35 +1,38 @@
-<!DOCTYPE html>
 <html lang="fr">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0"> <title>Portfolio - Bryan Lane</title> 
-    <link rel="stylesheet" href="style.css"> 
+    <link rel="stylesheet" href="style.css">  
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>   
   </head> 
   <body>
     <header>
-      <div class="logo"><img src="3DDD.png"></div> 
+      <div><img class="logo" src="LOGO.png"></div> 
       <nav> 
-        <a href="#">Works</a>
+        <a href="#">Accueil</a>
         <a href="#">Concepts</a>
         <a href="#">Archive</a> 
         <a href="#">Personal</a>
-      </nav> <div class="social">
-      <a href="#"><img src="twitter-icon.png" alt="Twitter"></a>
-      <a href="#"><img src="instagram-icon.png" alt="Instagram"></a>
+      </nav> 
+      <div class="social">
+      <a href="#"><i class='bx bx-cart'></i></a>
+      <a href="#"><i class='bx bx-user' ></i></a>
       </div>
         </header>
     <main>
       <div class="quote">
-    <p>"Transform your space into green oasis"</p>
-        <span class="author">Edith Södergran</span>
+        <p>"Transformez votre espace en vert oasis"</p>
+        <span class="author">Esteban</span>
+        <br>
+        <hr width="40px">
     </div>
     <div class="title"> 
-      <h1>The Happy Environement</h1> 
+      <h1>The Happy <br> Environement</h1> 
       <h1 class="lane">Esteban Thomas</h1>
     </div> 
-    <div class="image"img src="IMG_t.jpeg">
-      <img src="abstract-shape.png" alt="Abstract 3D Shape">
-    </div> 
-   </main>
+    <div>
+      <img id="plante" src="flower-transparent-png-12.png" alt="Abstract 3D Shape">
+    </div>
+    </main>
   </body>
 </html>
