--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <h1 class="lane">Esteban Thomas</h1>
     </div> 
     <div>
-      <img id="plante" src="flower-transparent-png-12.png" alt="Abstract 3D Shape">
+      <img id="plante" src="flower.png" alt="Abstract 3D Shape">
     </div>
     </main>
   </body>
