--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
       <div><img class="logo" src="LOGO.png"></div> 
       <nav> 
         <a href="#">Accueil</a>
-        <a href="#">Concepts</a>
+        <a href="#">Flowers</a>
         <a href="#">Archive</a> 
         <a href="#">Personal</a>
       </nav> 
@@ -21,8 +21,7 @@
         </header>
     <main>
       <div class="quote">
-        <p>"Transformez votre espace en vert oasis"</p>
-        <span class="author">Esteban</span>
+        <p>"Transform your space into a green oasis"</p>
         <br>
         <hr width="40px">
     </div>
@@ -33,6 +32,9 @@
     <div>
       <img id="plante" src="flower.png" alt="Abstract 3D Shape">
     </div>
+            <div class="quote">
+      <span class="author">Made in France</span>
+      </div>
     </main>
   </body>
 </html>
