--- a/index.html
+++ b/index.html
@@ -35,6 +35,22 @@
             <div class="quote">
       <span class="author">Made in France</span>
       </div>
+      
+      <section id="T-shirt">
+            <div class="article">
+                <img src="IMG_t.jpeg" alt="Article 2">
+                <h3>Malizola</h3>
+                <p>Elegant and luxurious</p>
+              <button class="btn-acheter">Buy</button>
+                </div>
+        
+         <section id="Sweat">
+            <div class="article">
+                <img src="IMG_z.jpeg" alt="Article 3">
+                <h3>Gandja</h3>
+                <p>Élégance and Versatility </p>
+                     <button class="btn-acheter">Buy</button>
+
     </main>
   </body>
 </html>
