--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         
          <section id="Sweat">
             <div class="article">
-                <img src="IMG_z.jpeg" alt="Article 3">
+                <img src="plt.png" alt="Article 3">
                 <h3>Gandja</h3>
                 <p>Élégance and Versatility </p>
                      <button class="btn-acheter">Buy</button>
