--- a/index.html
+++ b/index.html
@@ -38,9 +38,10 @@
       
       <section id="T-shirt">
             <div class="article">
-                <img src="IMG_t.jpeg" alt="Article 2">
+                <img src="plt2.png alt="Article 2">
                 <h3>Malizola</h3>
                 <p>Elegant and luxurious</p>
+               <p>19£</p>
               <button class="btn-acheter">Buy</button>
                 </div>
         
@@ -49,6 +50,7 @@
                 <img src="plt.png" alt="Article 3">
                 <h3>Gandja</h3>
                 <p>Élégance and Versatility </p>
+              <p>19£</p>
                      <button class="btn-acheter">Buy</button>
 
     </main>
