--- a/index.html
+++ b/index.html
@@ -35,7 +35,8 @@
             <div class="quote">
       <span class="author">Made in France</span>
       </div>
-      
+
+      < p style="margin-rigth: 20px; display: inline"></p>
       <section id="T-shirt">
             <div class="article">
                 <img src="plt2.png alt="Article 2">
