--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
       <span class="author">Made in France</span>
       </div>
 
-      < p style="margin-rigth: 20px; display: inline"></p>
+      < p style="margin-rigth: 20px; display: inline">             </p>
+      
       <section id="T-shirt">
             <div class="article">
                 <img src="plt2.png alt="Article 2">
@@ -46,9 +47,9 @@
               <button class="btn-acheter">Buy</button>
                 </div>
         
-         <section id="Sweat">
+         <section id="T-shirt">
             <div class="article">
-                <img src="plt.png" alt="Article 3">
+              <img src="plt.png alt="Article 2">
                 <h3>Gandja</h3>
                 <p>Élégance and Versatility </p>
               <p>19£</p>
