--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   <body>
     <header>
       <div><img class="logo" src="LOGO.png"></div> 
-      <nav> 
-        <a href="#">Accueil</a>
-        <a href="#">Flowers</a>
-        <a href="#">Archive</a> 
-        <a href="#">Personal</a>
+      <nav>
+         <a class="btn-hautdepage">Acceuil</a>
+        <a class="btn-hautdepage">Flowers</a>
+        <a class="btn-hautdepage">Archive</a>
+        <a class="btn-hautdepage">Personal</a>
       </nav> 
       <div class="social">
       <a href="#"><i class='bx bx-cart'></i></a>
