--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
       
       <section id="T-shirt">
             <div class="article">
-                <img src="plt2.png" alt="Article  1">
+                <img src="plt2.png"
+                  width: 100px;
+                  height: 100px;
+                  alt="Article  1">
                 <h3>Malizola</h3>
                 <p>Elegant and luxurious</p>
                <p>19£</p>
