--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
       
       <section id="T-shirt">
             <div class="article">
-                <img class="im" src="plt2.png" alt="Article  1">
+                <img src="plt2.png" div="im" alt="Article 1">
                 <h3>Malizola</h3>
                 <p>Elegant and luxurious</p>
                <p>19£</p>
