--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
                 <p>Élégance and Versatility </p>
               <p>19£</p>
                      <button class="btn-acheter">Buy</button>
+                    </div>
+                    <div> class="image-container">
+                      <img src="plt.png" alt="Article 1">
+                      <img src="plt2.png" alt="Article 1">
+                      <img src="plt3.png" alt="Article 1">
+                    </div>
 
     </main>
   </body>
