--- a/index.html
+++ b/index.html
@@ -54,12 +54,11 @@
               <p>19£</p>
                      <button class="btn-acheter">Buy</button>
                     </div>
-                    <div> class="image-container">
+                    <div class="image-container">
                       <img src="plt.png" alt="Article 1">
                       <img src="plt2.png" alt="Article 1">
                       <img src="plt3.png" alt="Article 1">
                     </div>
-
     </main>
   </body>
 </html>
