--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
               <p>19£</p>
                      <button class="btn-acheter">Buy</button>
                     </div>
-                    <div class="image-container">
+                    <div class="image-container", class="image-container img">
                       <img src="plt.png" alt="Article 1">
                       <img src="plt2.png" alt="Article 1">
                       <img src="plt3.png" alt="Article 1">
