--- a/index.html
+++ b/index.html
@@ -55,9 +55,9 @@
                      <button class="btn-acheter">Buy</button>
                     </div>
                     <div class="image-container", class="image-container img">
-                      <img src="plt.png" alt="Article 1">
-                      <img src="plt2.png" alt="Article 1">
-                      <img src="plt3.png" alt="Article 1">
+                      <img src="plt.png" alt="Article 1", class="btn-acheter">Buy</button>>
+                      <img src="plt2.png" alt="Article 1", class="btn-acheter">Buy>
+                      <img src="plt3.png" alt="Article 1", class="btn-acheter">Buy>
                     </div>
     </main>
   </body>
