--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
       <span class="author">Made in France</span>
       </div>
            <div class="image-container", class="image-container img">
-          <img src="plt.png" alt="Article 1", class="btn-acheter">
+          <img src="plt4.png" alt="Article 1", class="btn-acheter">
          <img src="plt2.png" alt="Article 1", class="btn-acheter">
         <img src="plt3.png" alt="Article 1", class="btn-acheter">
       </div>
