--- a/index.html
+++ b/index.html
@@ -35,10 +35,10 @@
             <div class="quote">
       <span class="author">Made in France</span>
       </div>
-           <div class="image-container", class="image-container img">
-          <img src="plt4.png" alt="Article 1", class="btn-acheter">
-         <img src="plt2.png" alt="Article 1", class="btn-acheter">
-        <img src="plt3.png" alt="Article 1", class="btn-acheter">
+           <div class="container", class="container img">
+          <contnair img src="plt4.png" alt="Article 1", class="btn-acheter">
+         <contnair img src="plt2.png" alt="Article 1", class="btn-acheter">
+        <contnair img src="plt3.png" alt="Article 1", class="btn-acheter">
       </div>
     </main>
   </body>
